# ReasoningNCP

./: download_libgen_books.py  libgen.ipynb  pyproject.toml
setup_data/: chiron_generation_module_utils.py  compile_dataset.py  filter_csheets.py  instructions.md  vllm_gen_character_sheets.py  vllm_summarize_chapter_summaries.py  vllm_summarize_character_sheets.py
