[project]
name = "reasoningncp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexander Gurung", email = "alexander.gurung@gmail.com" }]
dependencies = [
    "httpx>=0.28.1",
    "libgen-api>=1.0.1",
]

[project.scripts]
gen_data = "reasoningncp:main"

[project.optional-dependencies]
setup_data = [
  "datasets==3.3.2",
  "huggingface-hub==0.29.3",
  "jsonlines==4.0.0",
  "numpy==2.2.4",
  # "torch==2.6.0+cu118",
  "torch==2.5.1",
  "tqdm==4.67.1",
  "transformers==4.49.0",
  "trl==0.15.2",
  # "vllm==0.7.3",
  "spacy==3.7.1",
  "openai==1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# # Include packages from these directories
# packages = ["sft_training", "story_generation"] # Adjust this list based on your structure
[tool.hatch.build.targets.wheel]
packages = ["rl_training", "setup_data", "sft_training", "story_generation"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
